# do_the_evolution

./: README.md
build_mixed_Average/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  cmake_install.cmake  sim.vcxproj  sim.vcxproj.filters
build_thinkers_average/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EvolutionSim.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sim.vcxproj  sim.vcxproj.filters  simulation_launcher.lnk
evolution_sim/: CMakeLists.txt  elite_genomes.txt
evolution_sim/include/: Agent.hpp  Environment.hpp  GeneticAlgorithm.hpp  Genome.hpp  Logger.hpp  NeuralNetwork.hpp  Renderer.hpp  Simulation.hpp
evolution_sim/mixed/: tes1_high_food_mixed_finalLog.csv  tes2_high_food_mixed_finalLog.csv  tes3_high_food_mixed_finalLog.csv  test1_high_food_mixed.csv  test1_low_food_mixed.csv  test1_low_food_mixed_finalLog.csv  test1_med_food_mixed.csv  test1_med_food_mixed_finalLog.csv  test2_high_food_mixed.csv  test2_low_food_mixed.csv  test2_low_food_mixed_finalLog.csv  test2_med_food_mixed.csv  test2_med_food_mixed_finalLog.csv  test3_high_food_mixed.csv  test3_low_food_mixed.csv  test3_low_food_mixed_finalLog.csv  test3_med_food_mixed.csv  test3_med_food_mixed_finalLog.csv
evolution_sim/src/: Agent.cpp  Environment.cpp  GeneticAlgorithm.cpp  Logger.cpp  NeuralNetwork.cpp  Renderer.cpp  Simulation.cpp  main.cpp
simulation_thinkers/: README.txt  sim  tes_med_food_mixed_thinkers.csv  test_med_food_thinkers.csv
simulation_wanderers/: CMakeCache.txt  cmake_install.cmake  sim  tes_med_food_mixed_wanderers.csv  (+1 more)
(+31 files in other folders)
